--- a/examproject/public/index.html
+++ b/examproject/public/index.html
@@ -23,7 +23,7 @@
       crossorigin="anonymous" />
     <title>React App</title>
   </head>
-  <body>
+  <body style="width: 1140px;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
