section1 created and ended

--- a/examproject/public/index.html
+++ b/examproject/public/index.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous" />
-    <title>React App</title>
+    <title>TOCHKA - Website</title>
   </head>
   <body style="width: 1140px;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
